<resources>
    <string name="app_name">"SchedNet"</string>

    <!-- MAIN_ACTIVITY -->
    <!-- n = navigate, m = menu -->
    <string name="nav_login">Login</string>
    <string name="nm_todo_hub">Todo</string>
    <string name="nav_todo_list">Todo List</string>
    <string name="nav_todo_edit">Todo Edit</string>
    <string name="nm_calendar">Calendar</string>
    <string name="nm_favorite">Favorite</string>
    <string name="nm_settings">Setting</string>
    <string name="nav_favorite_edit_calendar">Edit Favorite Calendar</string>
    <string name="nav_favorite_list_select">Favorite List Select</string>
    <string name="nav_settings_edit_question">Edit Question</string>

    <!-- login -->
    <string name="login">Login</string>
    <string name="login_label_text">Welcome!</string>
    <string name="login_username_text">Username</string>
    <string name="login_password_text">Password</string>
    <string name="login_forgot_text">forgot password</string>
    <string name="login_register_text">register</string>
    <string name="login_username_hint">eg: coffee123</string>
    <string name="login_password_hint">******</string>
    <string name="login_local_text">Login</string>
    <string name="login_remember_text">Remember me</string>
    <string name="login_forgot_label_text">Forgot Password</string>

    <!-- Sign_Up_Form -->
    <string name="signup_label_text">Sign Up</string>
    <string name="signup_username_text">Username</string>
    <string name="signup_password_text">Password</string>
    <string name="signup_forgot_text">forgot password</string>
    <string name="signup_confirm_text">Confirm</string>
    <string name="signup_progress_format">%1$d of %2$s</string>
    <string name="signup_progress_text">1 of 2</string>
    <string name="signup_already_exists_error_text">*User already exists</string>
    <string name="signup_forward_text">Next</string>
    <string name="signup_account_name_text">Account Name</string>
    <string name="signup_account_name_hint">Name</string>
    <string name="signup_continue_button">Continue</string>

    <!-- Forgot Password -->
    <string name="forgot_label_title">Forgot Password</string>
    <string name="forgot_question_one">Q1:</string>
    <string name="forgot_question_two">Q2:</string>
    <string name="forgot_question_format">Q%1$d: %2$s</string>
    <string name="forgot_answer_error_text">*Answer mismatch</string>

    <!-- STAGE ACTIVITY -->
    <!-- Action Bar -->
    <string name="generic_dots_description">Extra Actions</string>

    <!-- Lists -->
    <string name="list_label_text">Lists</string>

    <!-- Tdo List -->
    <string name="todo_label_text">listname</string>
    <string name="new_chip_due_text">Due</string>

    <!-- Calendar -->
    <string name="calendar_label_text">Calendar</string>
    <string name="new_chip_description_range">event range</string>
    <string name="calendar_weekday_sun">SUN</string>
    <string name="calendar_weekday_mon">MON</string>
    <string name="calendar_weekday_tue">TUE</string>
    <string name="calendar_weekday_wed">WED</string>
    <string name="calendar_weekday_thur">THUR</string>
    <string name="calendar_weekday_fri">FRI</string>
    <string name="calendar_weekday_sat">SAT</string>
    <string name="new_chip_date">Date</string>
    <string name="calendar_list_upcoming_text">Upcoming</string>
    <string name="time_button_description">Set Time</string>

    <!-- Favorite -->
    <string name="favorite_label_text">Favorites</string>
    <string name="general_favorite_name_hint">Profile Name</string>
    <string name="favorite_list_select_text">List Select</string>
    <string name="favorite_profile_button_text">Add new event</string>
    <string name="favorite_calendar_name_text">Favorite Calendar</string>
    <string name="favorite_todo_name_text">Favorite Todo</string>

    <!-- Shared -->
    <string name="menu_ribbon_pin_description">Pin to top</string>
    <string name="generic_save_button_text">save</string>
    <string name="generic_add_element_description">Create List Item</string>
    <string name="generic_task_description_hint">Description</string>
    <string name="general_task_name_hint">Task Name</string>
    <string name="general_list_name_hint">List Name</string>
    <string name="generic_actionbar_switch_description">change mode</string>
    <string name="new_chip_pin_text">Pin</string>
    <string name="new_chip_description_text">Description</string>

    <!-- Settings -->
    <string name="settings_update_name_text">Update Name</string>
    <string name="settings_logout_text">Logout</string>
    <string name="settings_delete_text">Delete Account</string>
    <string name="settings_expiration_calendar_text">Calendar Expiration:</string>
    <string name="settings_expiration_todo_text">Todo Expiration:</string>
    <string name="settings_event_preference_table_text">Event Preferences</string>
    <string name="settings_update_question_text">Update SEQ</string>
    <string name="settings_update_password_button">Update Password</string>
    <string name="settings_default_name">Name</string>
    <string name="default_profile_type_off_text">Default to calendar profiles</string>

    <string-array name="garbage_collector_todo">
        <item>Off</item>
        <item>Instant</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="garbage_collector_calendar">
        <item>Off</item>
        <item>Instant</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <!-- Generics -->
    <string name="generic_question_one_text">Question 1</string>
    <string name="generic_answer_one_text">Answer 1</string>
    <string name="generic_question_hint">Question</string>
    <string name="generic_answer_hint">Answer</string>
    <string name="generic_question_two_text">Question 2</string>
    <string name="generic_answer_two_text">Answer 2</string>
    <string name="generic_new_account_name_text">New Name</string>
    <string name="generic_previous_description">previous</string>
    <string name="generic_forward_description">forward</string>
    <string name="generic_date_description">Month Year</string>
    <string name="generic_confirm_button_description">Confirm</string>
    <string name="generic_cancel_button_description">Cancel</string>
    <string name="generic_calendar_empty_text">no events yet</string>

    <!-- Mixed -->
    <string name="pinned_switch_text">Pinned</string>
    <string name="error_name_field_empty_text">*Event name field is empty</string>
    <string name="calendar_result_text">Result</string>
    <string name="generic_warning_text">Warning</string>
    <string name="generic_warning_content_text">All account data will be deleted and unretrievable!</string>
    <string name="settings_favorites_header">Favorite Page Preferences</string>
    <string name="error_no_date_specified">*No date specified</string>
    <string name="refocus_calendar_button">Refocus to current month</string>
</resources>
