<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_ribbon_frame_banner"
        android:background="@color/purple_700" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical" >

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LoginLabels"
            android:layout_marginBottom="0dp"
            android:text="@string/generic_question_one_text" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout.Register"
            android:id="@+id/signup_question_layout"
            android:hint="@string/generic_question_hint"
            app:counterEnabled="true"
            app:counterMaxLength="100" >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText.Login"
                android:id="@+id/signup_question_edit"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:maxLines="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LoginLabels"
            android:layout_marginBottom="0dp"
            android:text="@string/generic_answer_one_text" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout.Register"
            android:id="@+id/signup_answer_layout"
            android:hint="@string/generic_answer_hint"
            app:counterEnabled="true"
            app:counterMaxLength="200" >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText.Login"
                android:id="@+id/signup_answer_edit"
                android:inputType="textMultiLine"
                android:maxLength="200"
                android:maxLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LoginLabels"
            android:text="@string/generic_question_two_text" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout.Register"
            android:id="@+id/signup_question_two_layout"
            android:hint="@string/generic_question_hint"
            app:counterEnabled="true"
            app:counterMaxLength="100" >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText.Login"
                android:id="@+id/signup_question_two_edit"
                android:inputType="textMultiLine"
                android:maxLength="100"
                android:maxLines="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LoginLabels"
            android:text="@string/generic_answer_two_text" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout.Register"
            android:id="@+id/signup_answer_two_layout"
            android:hint="@string/generic_answer_hint"
            app:counterEnabled="true"
            app:counterMaxLength="200" >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText.Login"
                android:id="@+id/signup_answer_two_edit"
                android:inputType="textMultiLine"
                android:maxLength="200"
                android:maxLines="3" />
        </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/action_bar_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/generic_cancel_button"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@color/red_menu"
            app:srcCompat="@drawable/ic_cancel_24_ico"
            android:contentDescription="@string/generic_cancel_button_description"
            android:tint="@color/white"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/generic_confirm_button"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@color/green_menu"
            app:srcCompat="@drawable/ic_baseline_check_24"
            android:contentDescription="@string/generic_confirm_button_description"
            android:tint="@color/white"
            />
    </LinearLayout>

</LinearLayout>