<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/SubLoginLabel"
        android:id="@+id/signup_label"
        android:text="@string/login_forgot_label_text"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_gravity="center_horizontal" >

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LoginLabels"
            android:text="@string/signup_username_text" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout.Register"
            android:id="@+id/forgot_signup_layout"
            android:hint="@string/signup_username_text"
            app:startIconDrawable="@drawable/ic_baseline_person_24" >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText.Login"
                android:id="@+id/forgot_signup_edit"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        style="@style/LoginButton"
        android:id="@+id/forgot_continue_button"
        android:text="@string/signup_continue_button" />

</LinearLayout>