<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        android:layout_marginBottom="5dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="0dp" >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@color/transparent"
            app:srcCompat="@drawable/ic_baseline_warning_24"
            app:tint="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generic_warning_text"
        app:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/generic_warning_content_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center" />


    <LinearLayout
        android:id="@+id/action_bar_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/generic_cancel_button"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@color/red_menu"
            app:srcCompat="@drawable/ic_cancel_24_ico"
            android:contentDescription="@string/generic_cancel_button_description"
            android:tint="@color/white"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/generic_confirm_button"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@color/green_menu"
            app:srcCompat="@drawable/ic_baseline_check_24"
            android:contentDescription="@string/generic_confirm_button_description"
            android:tint="@color/white"
            />
    </LinearLayout>
</LinearLayout>