<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/TitleBar"
        android:id="@+id/list_label"
        android:text="@string/list_label_text"
        android:textColor="@color/white"
        android:background="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_label"
        app:layout_constraintBottom_toTopOf="@id/list_actionbar"
        tools:listitem="@layout/list_ribbon_menu"
        tools:itemCount="20"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_actionbar"
        style="@style/ActionBar"
        android:background="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageButton
            android:id="@+id/list_actionbar_dots"
            style="@style/ActionBar.Element"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_menu_dot_settings_ico"
            android:contentDescription="@string/generic_dots_description" />

        <ImageButton
            android:id="@+id/list_actionbar_new_list"
            style="@style/ActionBar.AddElement"
            android:contentDescription="@string/generic_add_element_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_plus_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>